WEB/CSS/style.css
/* ... */
@media(prefers-reduced-motion: no-preference) {
    .animated-text h1 {
        animation: text-gradient 5s linear infinite reverse;
    }

    @keyframes text-gradient {
        to {
            background-position: var(--bg-size) 0;
        }
    }
}


@media (max-width: 768px) {

    * {
        /* Prevent default browser usual effect when clicking on a link */
        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    }

    .half-slash-left div:first-of-type {
        width: 100vw;
        clip-path: none;
        padding: 0 1rem;
        *{ width: 100%; }
    }

    .half-slash-left div:last-of-type {
        width: 100%;
    }


    .row-flex>div {
        flex-direction: column;
    }

    .button-container {
        flex-direction: row;

    }

    .button-container a {
        width: 100%;
    }

    .button-primary,
    .button-secondary {
        width: 100%;
        min-width: 150px;
    }

    /* Mobile-specific styles */
    .hamburger {
        display: flex;
        align-items: center;
        justify-self: center;
        opacity: 1;
        align-self: center;
        margin-right: 2rem;
        z-index: 2;
        /* size: 5rem; */
    }

    .hamburger * {
        color: black;
    }

    header .top-header {
        align-items: center;
        /* flex-direction: column; */
        margin: 0;
        /* height: 100vh; */
    }

    header .top-header .menu {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        position: fixed;
        top: 0;
        left: 0;
        height: 0;
        width: 100vw;
        background-color: var(--color-primary-red);
        z-index: 1;
        overflow: hidden;
        /* Initial hidden state */
        height: 0;
        opacity: 0;
        visibility: hidden;
        /* Transition for smooth opening/closing */
        transition: height 0.4s ease-out, opacity 0.3s ease-in, visibility 0s linear 0.4s;
    }

    header .top-header .menu.show {
        height: 100vh;
        opacity: 1;
        visibility: visible;
        /* Transition for opening */
        transition: height 0.4s ease-out, opacity 0.3s ease-in;
    }

    @keyframes menuBackgroundSlideDown {

        from {
            height: 0;
        }

        to {
            height: 100vh;
        }
    }

    @keyframes backgroundFadeIn {
        from {
            opacity: 0.5;
        }

        to {
            opacity: 1;
        }

    }

    header .top-header .menu.closing {
        animation: menuBackgroundSlideUp 0.4s ease-in forwards;
    }

    @keyframes menuBackgroundSlideUp {

        from {
            height: 100vh;
            opacity: 1;
        }

        to {
            height: 0;
            opacity: 0.5;
        }
    }

    header .top-header .menu ul {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        height: 100%;
        width: 100%;
        margin: auto;
        /* position: absolute; */
        /* transform: translate(-50%, -50%); */
        /* top: 75%;
        left: 90%; */
        /* top: 50%;
        left: 50%; */
    }

    header .top-header .menu ul li {
        width: 100%;
        height: auto;

    }

    header .top-header .menu ul li a {
        opacity: 0;
        width: 75%;
        text-align: center;
        margin: auto;
        font-size: 25px;
        font-weight: 700;
        background: none;

        /* Initial hidden state */
        opacity: 0;
        transform: translateY(-20px);

        /* Transition for both opening and closing */
        transition: opacity 0.4s ease, transform 0.4s ease;
        /* No delay when closing */
        transition-delay: 0s;

    }

    header .top-header .menu ul li a:hover {
        background: none
    }

    header .top-header .menu.show ul li a {
        /* Target state for links when menu is open */
        opacity: 1;
        transform: translateY(0px);
    }

    @keyframes fadeIn {
        from {
            opacity: 0;
            transform: translateY(-20px);
        }

        to {
            opacity: 1;
            transform: translateY(0px);
        }
    }

    /* Stagger the animation for each link */
    header .top-header .menu.show ul li:nth-child(1) a {
        transition-delay: 0.2s;
    }

    header .top-header .menu.show ul li:nth-child(2) a {
        transition-delay: 0.3s;
    }

    header .top-header .menu.show ul li:nth-child(3) a {
        transition-delay: 0.4s;
    }

    header .top-header .menu.show ul li:nth-child(4) a {
        transition-delay: 0.5s;
    }

    header .top-header .menu.show ul li:nth-child(5) a {
        transition-delay: 0.6s;
    }

    header .top-header .menu.show ul li:nth-child(6) a {
        transition-delay: 0.7s;
    }

    header .top-header .menu.closing ul li a {
        animation: fadeOut 0.2s ease forwards;
    }

    @keyframes fadeOut {
        from {
            opacity: 1;
            transform: translateY(0px);
        }

        to {
            opacity: 0;
            transform: translateY(-20px);
        }
    }

    .group-element {
        width: 80%;
        min-width: unset;
    }

    .animated-text h1 {
        font-size: min(12vw, 6rem);
        ;
    }
}

